# capturehelper

./: CMakeLists.txt  README.rst
UI/: CMakeLists.txt  obs-app.cpp  obs-app.hpp  obs.rc.in  window-basic-main.cpp
libobs/: obs-config.h
